--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "prop-types": "^15.5.7",
     "react": "16.2.0",
     "react-native": "0.52.0",
-    "react-native-extended-stylesheet": "^0.8.1"
+    "react-native-extended-stylesheet": "^0.8.1",
+    "react-navigation": "^1.0.3"
   }
 }
